login server push

--- a/src/main/resources/templates/index/index.mustache
+++ b/src/main/resources/templates/index/index.mustache
@@ -14,11 +14,11 @@
         <input type="submit" value="결과 확인"/>
     </form>
 
-    <a href="http://dddssrbackend-env.ap-northeast-2.elasticbeanstalk.com/oauth2/authorization/google">google</a>
-    <a href="http://dddssrbackend-env.ap-northeast-2.elasticbeanstalk.com/oauth2/authorization/naver">naver</a>
-    <a href="http://dddssrbackend-env.ap-northeast-2.elasticbeanstalk.com/oauth2/authorization/kakao">kakao</a>
-<!--    <a href="/oauth2/authorization/google">google</a>-->
-<!--    <a href="/oauth2/authorization/naver">naver</a>-->
-<!--    <a href="/oauth2/authorization/kakao">kakao</a>-->
+<!--    <a href="http://dddssrbackend-env.ap-northeast-2.elasticbeanstalk.com/oauth2/authorization/google">google</a> -->
+<!--    <a href="http://dddssrbackend-env.ap-northeast-2.elasticbeanstalk.com/oauth2/authorization/naver">naver</a> -->
+<!--    <a href="http://dddssrbackend-env.ap-northeast-2.elasticbeanstalk.com/oauth2/authorization/kakao">kakao</a> -->
+    <a href="/oauth2/authorization/google">google</a>
+    <a href="/oauth2/authorization/naver">naver</a>
+    <a href="/oauth2/authorization/kakao">kakao</a>
 </body>
 </html>
